# SOP-Automation

./: .replit  Dockerfile  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: __init__.py  config.py  main.py  requirements.txt
backend/routes/: __init__.py  sop.py
client/src/: App.tsx
client/src/components/ui/: layout.tsx  metrics-card.tsx  workflow-card.tsx
client/src/pages/: auth-page.tsx  dashboard.tsx  sop-generator.tsx  workflows.tsx
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/sop/: SOPCreation.tsx
frontend/src/components/workflow/: TestWorkflowSuggestion.tsx  WorkflowSuggestions.tsx
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: api.json
n8n-workflows/templates/: invoice_workflow_v1.json
scripts/: switch-env.sh  test.sh
server/: auth.ts  index.ts  logger.ts  openai.ts  routes.ts  storage.ts
server/routes/: automation.ts  sop.ts
server/services/: ai.ts  n8n.ts  zapier.ts
server/tests/: zapier-test.ts
shared/: models.py  schema.ts
